Fixed sidebar overflow scroll and search bar positioning

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -9,6 +9,7 @@
   position: relative;
   display: inline-block;
   vertical-align: middle;
+  overflow-y: scroll;
 }
 .sidebar ol {
   -webkit-padding-start: 0px;
@@ -28,7 +29,7 @@
 }
 .search-repositories {
   background: #00B7FF;
-  position: absolute;
+  position: fixed;
   bottom: 1px;
   left: 0;
   width: 100%;
